--- a/main.css
+++ b/main.css
@@ -10,6 +10,7 @@
   background-color: #f3f3f3;
   border: 0 solid #e5e5e5;
   border-left-width: 1px;
+  border-right-width: 1px;
   /*box-shadow: inset 2px 0 6px #ececec;*/
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
