Added HTML outliner, ...
Refactored CSS outliner to use Brackets' built in CSSUtils
Added column to outlined items, so jumping to an item goes to the appropriate column as well
Added level property to outlined items to denote source scope level

--- a/templates/outline-list-item.html
+++ b/templates/outline-list-item.html
@@ -1,1 +1,3 @@
-<li class="{{itemClass}}" data-line="{{line}}" title="{{title}}"><span>{{label}}</span></li>
+<li class="{{itemClass}}" data-line="{{line}}" data-ch="{{ch}}" data-level="{{level}}" title="{{title}}">
+    <span>{{label}}</span>
+</li>
